chore: cleaned up code
