# src/main/java/de/axa/robin/vertragsverwaltung/backend/modell/Preis.java
@@ -3,22 +3,15 @@ package de.axa.robin.vertragsverwaltung.backend.modell;
 import de.axa.robin.vertragsverwaltung.backend.config.Setup;
 import de.axa.robin.vertragsverwaltung.backend.storage.Repository;
 import jakarta.json.JsonObject;
-import lombok.Getter;
-import lombok.Setter;
 
-@Getter
-@Setter
-public class Preis {
-    private double speed;
-    private double age;
-    private double faktor;
-
+public class Preis extends de.axa.robin.vertragsverwaltung.model.Preis {
     public Preis() {
+        super();
         Setup setup = new Setup();
         Repository repo = new Repository(setup);
         JsonObject jsonObject = repo.ladeFaktoren();
-        this.faktor = jsonObject.getJsonNumber("factor").doubleValue();
-        this.age = jsonObject.getJsonNumber("factorage").doubleValue();
-        this.speed = jsonObject.getJsonNumber("factorspeed").doubleValue();
+        super.setFaktor(jsonObject.getJsonNumber("factor").doubleValue());
+        super.setAge(jsonObject.getJsonNumber("factorage").doubleValue());
+        super.setSpeed(jsonObject.getJsonNumber("factorspeed").doubleValue());
     }
 }
